--- a/examples/lvm_menu/README
+++ b/examples/lvm_menu/README
@@ -1,10 +1,10 @@
 This is an example of bash tool to build a customized LVM management menu.
 
-First, make sure to make menu.sh and lvm_menu.sh executable:
-(chmod +x menu.sh lvm_menu.sh).
+First, make sure to make menu.bash and lvm_menu.bash executable:
+(chmod +x menu.bash lvm_menu.bash).
 
-menu.sh     is used to create a generic menu with smenu
-lvm_menu.sh uses menu.sh to create a specialized menu to manage LVM objects
+menu.bash     is used to create a generic menu with smenu
+lvm_menu.bash uses menu.bash to create a specialized menu to manage LVM objects
 
-Running lvm_menu.sh -i should display something similar to the screenshot
+Running lvm_menu.bash -i should display something similar to the screenshot
 provided. In this screenshot the user is about to delete a LV.
